--- a/client/src/stylesheets/card.module.css
+++ b/client/src/stylesheets/card.module.css
@@ -145,3 +145,10 @@
 	margin-top: 3rem;
 	box-shadow: 0 0.25rem 0.5rem 0 rgba(0, 0, 0, 0), 0 0.375rem 1.25rem 0 rgba(0, 0, 0, 0);
 }
+
+.grade{
+    border-radius: 1rem;
+    margin-left: 0.7rem;
+    width: 4rem;
+    margin-bottom: 0.5rem;
+}
