changes in home-page

--- a/client/src/stylesheets/Home.css
+++ b/client/src/stylesheets/Home.css
@@ -6,4 +6,14 @@
     background-color: #E52D87;
     border-radius: 25px;
 }
+.btn-light-dark {
+    background-color: #79b7f4; /* Light initial color */
+    color: #212529; /* Text color */
+    transition: background-color 0.3s ease; /* Transition duration and easing */
+  }
+  
+  .btn-light-dark:hover {
+    background-color: #343a40; /* Darker color on hover */
+    color: #ffffff; /* Text color on hover */
+  }
 
