--- a/client/src/stylesheets/Success.css
+++ b/client/src/stylesheets/Success.css
@@ -9,8 +9,7 @@ body{
 	left:0;
 	width:100%;
 	height:100%;
-	background: linear-gradient(90deg,#189086,#2f8198);
-background-image: linear-gradient(to bottom right,#02b3e4,#02ccba);	
+background-color: #f08061;
 }
 
 .done{
