--- a/client/src/stylesheets/card.module.css
+++ b/client/src/stylesheets/card.module.css
@@ -1,5 +1,5 @@
 .cardstyle {
-	width: 90%;
+	width: 80%;
 	margin-top: 2vh;
 }
 
@@ -23,7 +23,8 @@
 	font-weight: bolder;
 	font-size: 1rem;
 	color: #291755;
-	padding: 0.01rem;
+	padding: 0.1rem;
+	margin-top: 2%;
 	padding-left: 1rem;
 }
 
@@ -151,4 +152,5 @@
     margin-left: 0.7rem;
     width: 4rem;
     margin-bottom: 0.5rem;
+	text-align: center;
 }
