--- a/client/src/stylesheets/card.module.css
+++ b/client/src/stylesheets/card.module.css
@@ -58,7 +58,7 @@
 .popup {
 	position: relative;
 	max-width: 90%;
-	max-height: 90%;
+	height: 10rem;
 	background-color: #fff;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
 	overflow-y: auto;
