--- a/client/src/stylesheets/card.module.css
+++ b/client/src/stylesheets/card.module.css
@@ -154,3 +154,24 @@
     margin-bottom: 0.5rem;
 	text-align: center;
 }
+
+.error {
+	height: 3rem;
+	width: 17rem;
+	background-color: #f8d7da;
+	border-radius: 0.5rem;
+	color: #721c24;
+	font-size: 1rem;
+	font-family: "Montserrat", sans-serif;
+	padding-top: 0.75rem;
+	padding-bottom: 0.75rem;
+	padding-left: 1.25rem;
+	padding-right: 1.25rem;
+	text-align: center;
+	margin-top: 0.5rem;
+	margin-bottom: 0.8rem;
+	font-weight: 500;
+	border-width: 0.1rem;
+	border-style: solid;
+	border-color: #fac1c7;
+}
